--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- Главный экран -->
         <div id="mainScreen">
             <header class="header">
-                <h1><i class="fas fa-comments"></i> Мои чаты</h1>
+                <h1><i class="fas fa-comments"></i> Запрещенная в рф Социальная Сеть</h1>
                 <button id="addChatBtn" class="btn btn-circle">
                     <i class="fas fa-plus"></i>
                 </button>
